--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </button>
         </div>
         <div class="main-data">
-            <img id="loader" class="loader" src="/loading.png" alt="loading" />
+            <img id="loader" class="loader" src="loading.png" alt="loading" />
             <p id="data-title">Response</p>
             <p id="data"></p>
         </div>
